--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -5,7 +5,7 @@
 }
 
 .LinkItem {
-    height: 50px;
+    min-height: 50px;
     text-align:left;
     display:flex;
 }
@@ -32,4 +32,8 @@
   .fileLinks{
         margin-top: 10px;
         text-align: left;
+  }
+
+  .file-link {
+    word-break: break-all;
   }
